--- a/Foodempire/uploaddownload/templates/uploaddownload/food.html
+++ b/Foodempire/uploaddownload/templates/uploaddownload/food.html
@@ -1,3 +1,4 @@
+{% extends 'uploaddownload/index.html' %}
 {% block content %}
 <form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
