--- a/Foodempire/user_registration/templates/user_registration/signup.html
+++ b/Foodempire/user_registration/templates/user_registration/signup.html
@@ -1,3 +1,6 @@
+{% extends 'user_registration/index.html' %}
+
+{% block content %}
 {{ a }}
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
@@ -6,6 +9,7 @@
     <title></title>
   </head>
   <body>
+    
     <form class="" action="/signup/" method="post" autocomplete="off">
       {% csrf_token %}
       <label>First name</label>
@@ -17,7 +21,7 @@
       <label>E-mail</label>
       <input type="email" name="email" value="" required><br>
       <label>phone_number</label>
-      <input type="text" name="phonenumber" value="" required><br>
+      <input type="number" name="phonenumber" value="" required><br>
       <label>address</label>
       <input type="text" name="address" value="" required><br>
       <label>Gender</label>
@@ -36,3 +40,7 @@
     </form>
   </body>
 </html>
+
+ {% endblock %}
+
+
