--- a/Foodempire/uploaddownload/templates/uploaddownload/y.html
+++ b/Foodempire/uploaddownload/templates/uploaddownload/y.html
@@ -1,7 +1,7 @@
 {% extends 'uploaddownload/index.html' %}
 {% block content %}
 
-<form class = "search-bar" method = "get">
+<form class = "search-bar" method = "get">Search Food :
 <input type ="text" name ="q" placeholder="Search.." value="{{query}}">
 </form>
 
