--- a/Foodempire/user_registration/templates/user_registration/home.html
+++ b/Foodempire/user_registration/templates/user_registration/home.html
@@ -1,4 +1,4 @@
 {% extends 'user_registration/index.html' %}
 {% block content %}
-<a href="/logout/">logout</a>
+<a href="/logout/">loout</a>
 {% endblock %}
