--- a/Foodempire/user_registration/templates/user_registration/signup.html
+++ b/Foodempire/user_registration/templates/user_registration/signup.html
@@ -9,35 +9,66 @@
     <title></title>
   </head>
   <body>
+                        {% if messages %}
+                            <ul class="messages">
+                                {% for message in messages %}
+                                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                                {% endfor %}
+                            </ul>
+                        {% endif %}
     
     <form class="" action="/signup/" method="post" autocomplete="off">
-      {% csrf_token %}
-      <label>First name</label>
-      <input class='loginForm' type="text" name="firstname" required><br>
-      <label>Middle name</label>
-      <input type="text" name="middlename" value=""><br>
-      <label>Last name</label>
-      <input type="text" name="lastname" value="" required><br>
-      <label>E-mail</label>
-      <input type="email" name="email" value="" required><br>
-      <label>phone_number</label>
-      <input type="number" name="phonenumber" value="" required><br>
-      <label>address</label>
-      <input type="text" name="address" value="" required><br>
-      <label>Gender</label>
-      <select class="" name="gender" required>
-        <option value="male">Male</option>
-        <option value="female">Female</option>
-        <option value="notToSay">Hidden</option>
-      </select><br>
-      <label>Date Of Birth</label>
-      <input type="date" name="dateo"><br>
-      <label>password</label>
-      <input type="password" name="password1" value="" required><br>
-      <label>confirm password</label>{{ error }}
-      <input type="password" name="password" required><br>
-      <input type="submit" name="signup" value="signup">
-    </form>
+      
+                {% csrf_token %}
+                <div class="row pad">
+                    <div class="col-lg-6">
+                        <div class="form-group">
+                            <label for="username">Username</label>
+                            <input type="text" name="username" placeholder="Username" required="TRUE">
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Email Address</label>
+                            <input type="text" name="email" placeholder="Email address" required="TRUE">
+                        </div>
+                    <div class="col-lg-6">
+                        <div class="form-group">
+                            <label for="first_name">First Name</label>
+                            <input type="text" name="first_name" placeholder="First Name" required="TRUE">
+                        </div>
+                        <div class="form-group">
+                            <label for="last_name">Last Name</label>
+                            <input type="text" name="last_name" placeholder="Last Name" required="TRUE">
+                        </div>
+                    </div>
+
+                    <div class="col-lg-6">
+                        <div class="form-group">
+                            <label for="password1">Password</label>
+                            <input type="password" name="password1" placeholder="Password1" required="TRUE">
+                        </div>
+                        <div class="form-group">
+                            <label for="password2">Confirm Password</label>
+                            <input type="password" name="password2" placeholder="Confirm Password" required="TRUE">
+                        </div>
+                    </div>
+
+                  <!--<div style="color: red;">{{ form.errors }}</div>-->
+                </div>
+
+                <div class="row pad">
+                    <div class="col-lg-6">
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-primary">
+                                <i class="glyphicon glyphicon-plus-sign"></i><strong>SignUp</strong>
+                            </button>
+                            <a href="{% url 'user_registration:login' %}" class="btn btn-link pull-right">
+                                Go to Login
+                                <i class="glyphicon glyphicon-arrow-right"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </form>
   </body>
 </html>
 
