--- a/Foodempire/user_registration/templates/user_registration/profile.html
+++ b/Foodempire/user_registration/templates/user_registration/profile.html
@@ -1,32 +1,43 @@
 {% extends 'user_registration/index.html' %}
-{% block content %}
-<h1>Welcome to Our Restaurant</h1>
+{% block content %}           
+                        <ul class="list-group">
+                            <li class="list-group-item">
+                                Email:
+                                <strong class="pull-right">{{ user.email }}</strong>
+                            </li>
+                            <li class="list-group-item">
+                                Username:
+                                <strong class="pull-right">{{ user.username }}</strong>
+                            </li>
+                            <li class="list-group-item">
+                                Join Date:
+                                <strong class="pull-right">{{ user.date_joined|date:"F j, Y" }}</strong>
+                            </li>
+                        </ul>
+                            <br>
+
+                        {% if messages %}
+                            <ul class="messages">
+                                {% for message in messages %}
+                                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                                {% endfor %}
+                            </ul>
+                        {% endif %}
 
 
-<br>
+    <form method="post" action="done">
+        {% csrf_token %}
+        <ul>
+            <li>Username:</li>
+            <input type="text" name="username" placeholder="{{ user.username }}" required="True">
+            <li>First Name</li>
+            <input type="text" name="first_name" placeholder="{{ user.first_name }}" required="True">
+            <li>Last Name</li>
+            <input type="text" name="last_name" placeholder="{{ user.last_name }}" required="True">
+            <li>Email</li>
+            <input type="text" name="email" placeholder="{{ user.email }}" required="True">
 
-<ul class="list-unstyled">
-  <li class="media">
-    <img class="mr-3" src="..." alt="Generic placeholder image">
-    <div class="media-body">
-      <h5 class="mt-0 mb-1">List-based media object</h5>
-      Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-    </div>
-  </li>
-  <li class="media my-4">
-    <img class="mr-3" src="..." alt="Generic placeholder image">
-    <div class="media-body">
-      <h5 class="mt-0 mb-1">List-based media object</h5>
-      Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-    </div>
-  </li>
-  <li class="media">
-    <img class="mr-3" src="..." alt="Generic placeholder image">
-    <div class="media-body">
-      <h5 class="mt-0 mb-1">List-based media object</h5>
-      Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-    </div>
-  </li>
-</ul>
-
+            <input type="submit" name="update" value="Update">
+        </ul>
+    </form>
 {% endblock %}
