--- a/Foodempire/uploaddownload/templates/uploaddownload/y.html
+++ b/Foodempire/uploaddownload/templates/uploaddownload/y.html
@@ -1,5 +1,10 @@
 {% extends 'uploaddownload/index.html' %}
 {% block content %}
+<!DOCTYPE html>
+<html>
+
+<body>
+
 
 <form class = "search-bar" method = "get">Search Food :
 <input type ="text" name ="q" placeholder="Search.." value="{{query}}">
@@ -38,11 +43,42 @@
 	{% endfor %}
 </tbody>
 </table>
+<style type="text/css">
+.pagination {
+  display: inline-block;
+}
 
-<a href="/list_food/pagination/5/1">1</a>
-<a href="/list_food/pagination/5/2">2</a>
-<a href="/list_food/pagination/5/3">3</a>
+.pagination a {
+  color: black;
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
+  transition: background-color .3s;
+  border: 1px solid #ddd;
+  font-size: 22px;
+}
 
+.pagination a.active {
+  background-color: #4CAF50;
+  color: white;
+  border: 1px solid #4CAF50;
+}
+
+.pagination a:hover:not(.active) {background-color: #ddd;}
+	
+</style>
+
+<div class="pagination">
+  <a href="#">&laquo;</a>
+<a href="/list_food/pagination/1" class="active">1</a>
+<a href="/list_food/pagination/2">2</a>
+<a href="/list_food/pagination/3">3</a>
+ <a href="#">&raquo;</a>
+</div>
+
+
+</body>
+</html>
 
 {% endblock %}
 
