--- a/Foodempire/user_registration/templates/user_registration/aboutUs.html
+++ b/Foodempire/user_registration/templates/user_registration/aboutUs.html
@@ -14,18 +14,18 @@
 <main class="main-grid">
   <div class="head">
     <h1 class="page-title">About us</h1>
-    <p class="subtitle">We are specialsts in web development. Creativity and fun are our ingredients for awesome work.</p>
+    <p class="subtitle">We are specialsts in our food work. Creativity and fun are our ingredients for awesome work.</p>
   </div>
   <img class="main-image" src="https://myrepublica.nagariknetwork.com/uploads/media/2018/October/Dharan-foodland.jpg" alt="restaurant pic">
 
   <div class="main-text">
-    <h2 class="section-title">We're really great guys</h2>
-    <p>Coding is a passion, and our team is the best you can get to thrive in your project. Our strengths are HTML, CSS & Javascript. If you want to learn more, please have a look at our Portfolio. </p>
-    <p>We have learned everything from scratch and spend sleepless nights to learn all the fundamentals es well as the advanced stuff to create projects. We love to work in a co-working space and that´s why you will not find us a "normal" office.</p>
+    <h2 class="section-title">Do you know?</h2>
+    <p>Did you know that the very first restaurant in the world was opened in Paris in 1765?  A tavern keeper, Monsieur Boulanger, served a single dish, sheep’s feet simmered in a white sauce. Boulanger's business was different from other food businesses, like cafes and inns, because Boulanger's business was centered on food, not alcohol, like taverns, or coffee and tea, like cafes. </p>
+    <p>We have learned everything from scratch and spend sleepless nights to learn all the fundamentals es well as the advanced stuff to create a beautiful enviroment for our customers. We love to make our own local foods in a co-working space and that´s why you will not find us a "normal" restaurant.</p>
 
     <h2 class="section-title sub">We can do all sorts of great stuff </h2>
-    <p>Honestly, we would like to support you with your project. We will get results together and at the end of the day, what else matters?</p>
-    <p>So sure, maybe we're a bit different from what you'd expect, but if you want to get a professional Web presence we're the guy´s for you.</p>
+    <p>Honestly, we would like to support you with your food project. We will get results together and at the end of the day, what else matters?</p>
+    <p>So sure, maybe we're a bit different from what you'd expect, but if you want to get a professional we're the guy´s for you.</p>
   </div>
 
 </main>
