--- a/Foodempire/user_registration/templates/user_registration/home.html
+++ b/Foodempire/user_registration/templates/user_registration/home.html
@@ -2,7 +2,6 @@
 {% block content %}
 <!DOCTYPE html>
 <html lang="en">
-<title>W3.CSS Template</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -21,46 +20,38 @@ body {font-family: "Lato", sans-serif}
   <div class="mySlides w3-display-container w3-center">
     <img src="https://img.theculturetrip.com/1024x/wp-content/uploads/2018/02/8888551938_9adf84cf85_k.jpg" style="width:100%">
     <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-      <h3>Los Angeles</h3>
-      <p><b>We had the best time playing at Venice Beach!</b></p>   
+      <h3>Nepalese Foods</h3>
+      <p><b>We provide the best quality food at Food Empire!</b></p>   
     </div>
   </div>
   <div class="mySlides w3-display-container w3-center">
     <img src="https://img.theculturetrip.com/1024x/wp-content/uploads/2018/02/4161421771_e960601403_b.jpg" style="width:100%">
     <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-      <h3>New York</h3>
-      <p><b>The atmosphere in New York is lorem ipsum.</b></p>    
+      <h3>Nepalese Food</h3>
+      <p><b>The atmosphere in Food Empire is awesome.</b></p>    
     </div>
   </div>
   <div class="mySlides w3-display-container w3-center">
-    <img src="https://img.theculturetrip.com/1024x/wp-content/uploads/2018/02/4271631740_6440a929f9_b.jpg" style="width:100%">
+    <img src="https://nepalijournal.com/wp-content/uploads/2019/06/Featured-Nepali-Food-1000x800.jpg" style="width:100%">
     <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-      <h3>Chicago</h3>
-      <p><b>Thank you, Chicago - A night we won't forget.</b></p>    
+      <h3>Nepalese Food</h3>
+      <p><b>Thank you, for visiting our website.</b></p>    
     </div>
   </div>
 
   <!-- The Band Section -->
-  <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
+  <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px font-size:40px" id="band">
     <h2 class="w3-wide">FoodEmpire</h2>
-    <p class="w3-opacity"><i>We love Foods</i></p>
-    <p class="w3-justify">We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-      ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur
-      adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <p class="w3-opacity" style="font-size:25px"><i>We love Foods</i></p>
+    <p class="w3-justify style="style="font-size:23px">We have created a Food Empire website. The Restaurant that we are Going to Own. It has always sounded extraordinary exiting to us to build our own restaurant. I can picture in my mind exactly how it would look and feel to my customers. We will be able to put my personality into my restaurant. We are thinking now about my restaurant’s interior, exterior, and, of course, menu. The interior of the restaurant that we are going to own its going to be big and spacious with an extra room for special events. It’s going to have nature decorations like plants, flowers, and fruits. It’s going to have nature colors like light brown, dark brown, green (gardenia green color).</p>
     
   </div>
 
   <!-- The Tour Section -->
   <div class="w3-black" id="tour">
     <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
-      <h2 class="w3-wide w3-center">FOOD TOUR DATES</h2>
-      <p class="w3-opacity w3-center"><i>Remember to book your tickets!</i></p><br>
-
-      <ul class="w3-ul w3-border w3-white w3-text-grey">
-        <li class="w3-padding">September <span class="w3-tag w3-red w3-margin-left">Sold out</span></li>
-        <li class="w3-padding">October <span class="w3-tag w3-red w3-margin-left">Sold out</span></li>
-        <li class="w3-padding">November <span class="w3-badge w3-right w3-margin-right">3</span></li>
-      </ul>
+      <h2 class="w3-wide w3-center">Buy Foods</h2>
+      
 
       <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
         <div class="w3-third w3-margin-bottom">
@@ -137,15 +128,38 @@ body {font-family: "Lato", sans-serif}
           <input class="w3-input w3-border" type="text" placeholder="Message" required name="Message">
           <button class="w3-button w3-black w3-section w3-right" type="submit">SEND</button>
         </form>
+
       </div>
+
     </div>
   </div>
   
 <!-- End Page Content -->
 </div>
 
+<p><strong>FIND US IN THIS MAP</strong><p>
+ <div class="map-responsive">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d56516.27690343106!2d85.29102751909471!3d27.70903191161246!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39eb198a307baabf%3A0xb5137c1bf18db1ea!2sKathmandu%2044600!5e0!3m2!1sen!2snp!4v1581312480169!5m2!1sen!2snp" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+                <style type="text/css">
+                  .map-responsive{
+                    overflow:hidden;
+                    padding-top: 10%;
+                    padding-bottom:20.25%;
+                    position:relative;
+                    height:40px;
+                    margin:60px;
+                    }
+                  .map-responsive iframe{
+                      left:0;
+                      top:0;
+                      width:100%;
+                      position:absolute;
+                     }
+            </style>
+        </div>
+
 <!-- Image of location/map -->
-<img src="/w3images/map.jpg" class="w3-image w3-greyscale-min" style="width:100%">
+<img src="https://dipeshsubba1993.files.wordpress.com/2014/05/kathmandu-at-night-nepal.jpg" class="w3-image w3-greyscale-min" style="width:100%">
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
