--- a/Foodempire/user_registration/templates/user_registration/home.html
+++ b/Foodempire/user_registration/templates/user_registration/home.html
@@ -137,7 +137,7 @@ body {font-family: "Lato", sans-serif}
 <!-- End Page Content -->
 </div>
 
-<p><strong>FIND US IN THIS MAP</strong><p>
+<p style="text-align: center;"><strong>FIND US IN THIS MAP</strong><p>
  <div class="map-responsive">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d56516.27690343106!2d85.29102751909471!3d27.70903191161246!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39eb198a307baabf%3A0xb5137c1bf18db1ea!2sKathmandu%2044600!5e0!3m2!1sen!2snp!4v1581312480169!5m2!1sen!2snp" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
                 <style type="text/css">
